Fixed bug #24519 (aggregate_methods_by_list() does not increment refcount)