ext/standard/aggregation.c
@@ -155,6 +155,7 @@ static void aggregate_methods(zend_class_entry *ce, zend_class_entry *from_ce, i
 
 			if (zend_hash_add(&ce->function_table, func_name, func_name_len,
 							  (void*)function, sizeof(zend_function), NULL) == SUCCESS) {
+				function_add_ref(function);
 				add_next_index_stringl(aggr_methods, func_name, func_name_len-1, 1);
 			}
 
